--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "gh-pages": "^3.2.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -39,5 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://syncroomkr.github.io/"
+  "homepage": "https://syncroomkr.github.io"
 }
