--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "react": "^17.0.2",
     "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-spring": "^9.2.3",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^1.0.1"
