--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
+    "typesafe-actions": "^5.1.0",
     "typescript": "^4.1.6",
     "web-vitals": "^1.0.1"
   },
