--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/jest": "^26.0.24",
     "@types/node": "^16.3.1",
     "@types/react": "^17.0.14",
+    "@types/react-copy-to-clipboard": "^5.0.1",
     "@types/react-dom": "^17.0.9",
     "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.1.8",
@@ -17,6 +18,7 @@
     "axios": "^0.21.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
