--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,9 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+    "typeRoots": ["./node_modules/@types", "./@types"]
   },
   "include": [
-    "src",
-    "src/custom.d.ts"
+    "src"
   ]
 }
