--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-scripts": "4.0.3",
     "react-stonecutter": "^0.3.10",
     "redux": "^4.1.0",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "typesafe-actions": "^5.1.0",
     "typescript": "^4.1.6",
