--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.1.8",
     "axios": "^0.21.1",
+    "classnames": "^2.3.1",
+    "node-sass": "5.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.0.3",
