--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "redux": "^4.1.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "simplebar-react": "^2.3.5",
     "typesafe-actions": "^5.1.0",
     "typescript": "^4.1.6",
     "web-vitals": "^1.0.1"
