--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.1.8",
+    "@types/react-transition-group": "^4.4.2",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "node-sass": "5.0.0",
@@ -26,6 +27,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-stonecutter": "^0.3.10",
+    "react-transition-group": "^4.4.2",
     "redux": "^4.1.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
