--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@types/react-transition-group": "^4.4.2",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
-    "node-sass": "5.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.0.3",
@@ -31,6 +30,7 @@
     "redux": "^4.1.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.44.0",
     "simplebar-react": "^2.3.5",
     "typesafe-actions": "^5.1.0",
     "typescript": "^4.1.6",
