--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   },
   "homepage": "https://syncroomkr.github.io/",
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "tailwindcss": "^3.2.4"
   }
 }
