--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-router-dom": "^5.1.8",
     "@types/react-transition-group": "^4.4.2",
     "axios": "^0.21.1",
+    "buffer": "^6.0.3",
     "classnames": "^2.3.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -24,7 +25,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-stonecutter": "^0.3.10",
     "react-transition-group": "^4.4.2",
     "redux": "^4.1.1",
@@ -64,7 +65,9 @@
   },
   "homepage": "https://syncroomkr.github.io/",
   "devDependencies": {
+    "autoprefixer": "^9.8.6",
     "gh-pages": "^3.2.3",
+    "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
   }
 }
