--- a/package.json
+++ b/package.json
@@ -57,10 +57,7 @@
   },
   "homepage": "https://syncroomkr.github.io/",
   "devDependencies": {
-    "autoprefixer": "^9.8.6",
-    "gh-pages": "^3.2.3",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@types/jest": "^26.0.24",
     "@types/node": "^16.3.1",
     "@types/react": "^17.0.14",
@@ -68,6 +65,10 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.1.8",
-    "@types/react-transition-group": "^4.4.2"
+    "@types/react-transition-group": "^4.4.2",
+    "autoprefixer": "^9.8.6",
+    "gh-pages": "^3.2.3",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
