--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.2.2",
     "buffer": "^6.0.3",
     "classnames": "^2.3.1",
+    "framer-motion": "6.2.4",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.0.3",
