--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "redux-thunk": "^2.3.0",
     "sass": "^1.47.0",
     "simplebar-react": "^2.3.5",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "typesafe-actions": "^5.1.0",
     "typescript": "^4.1.6",
     "web-vitals": "^1.0.1"
