--- a/package.json
+++ b/package.json
@@ -1,23 +1,18 @@
 {
-  "name": "syncroomkr.github.io",
+  "name": "syncroom-korea",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "deploy": "gh-pages -d build",
+    "predeploy": "yarn run build"
+  },
   "dependencies": {
-    "@samwen/base62-util": "^1.0.4",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^16.3.1",
-    "@types/react": "^17.0.14",
-    "@types/react-copy-to-clipboard": "^5.0.1",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-redux": "^7.1.18",
-    "@types/react-router-dom": "^5.1.8",
-    "@types/react-transition-group": "^4.4.2",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
-    "prop-types": "^15.7.2",
+    "lz-string": "^1.5.0",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.0.3",
     "react-device-detect": "^1.17.0",
@@ -33,37 +28,21 @@
     "sass": "^1.47.0",
     "simplebar-react": "^2.3.5",
     "typesafe-actions": "^5.1.0",
-    "typescript": "^4.1.6",
     "web-vitals": "^1.0.1"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts src/test",
-    "eject": "react-scripts eject",
-    "deploy": "gh-pages -d build",
-    "predeploy": "yarn run build"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "homepage": "https://syncroomkr.github.io/",
   "devDependencies": {
-    "gh-pages": "^3.2.3"
-  }
+    "@types/node": "^16.3.1",
+    "@types/react": "^17.0.14",
+    "@types/react-copy-to-clipboard": "^5.0.1",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-redux": "^7.1.18",
+    "@types/react-router-dom": "^5.1.8",
+    "@types/react-transition-group": "^4.4.2",
+    "@vitejs/plugin-react": "^4.1.0",
+    "gh-pages": "^3.2.3",
+    "typescript": "^5.2.2",
+    "vite": "^4.4.11",
+    "vite-plugin-svgr": "^4.1.0"
+  },
+  "homepage": "https://syncroom.kr"
 }
