--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/react-transition-group": "^4.4.2",
     "@vitejs/plugin-react": "^4.1.0",
     "gh-pages": "^3.2.3",
+    "prettier": "^3.0.3",
     "typescript": "^5.2.2",
     "vite": "^4.4.11",
     "vite-plugin-svgr": "^4.1.0"
