--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-copy-to-clipboard": "^5.0.3",
     "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.2",
+    "react-query": "^3.39.3",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
