--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "sass": "^1.47.0",
     "simplebar-react": "^2.3.5",
     "typesafe-actions": "^5.1.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^16.3.1",
