--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "preview": "vite preview",
     "deploy": "gh-pages -d build",
     "predeploy": "yarn run build",
-    "lint": "prettier --write ."
+    "lint": "prettier --write .",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "axios": "^1.5.1",
@@ -27,11 +28,12 @@
     "redux": "^4.1.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
-    "sass": "^1.47.0",
+    "sass": "^1.69.5",
     "simplebar-react": "^2.3.5",
     "typesafe-actions": "^5.1.0",
     "web-vitals": "^1.0.1",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/node": "^16.3.1",
