--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.5.1",
     "classnames": "^2.3.1",
     "lz-string": "^1.5.0",
+    "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.0.3",
     "react-device-detect": "^1.17.0",
