--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.3",
     "axios": "^1.5.1",
     "classnames": "^2.3.1",
     "lz-string": "^1.5.0",
@@ -20,6 +21,7 @@
     "react-copy-to-clipboard": "^5.0.3",
     "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.49.2",
     "react-query": "^3.39.3",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
