--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.3",
+    "@tanstack/react-query": "4.x",
+    "@zodios/core": "^10.9.6",
+    "@zodios/react": "^10.4.5",
     "axios": "^1.5.1",
     "classnames": "^2.3.1",
     "lz-string": "^1.5.0",
@@ -22,7 +25,6 @@
     "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.49.2",
-    "react-query": "^3.39.3",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
