:wrench: Init `tailwindcss` and `shadcn-ui`

--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.5.1",
+    "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.1",
+    "clsx": "^2.1.0",
+    "lucide-react": "^0.303.0",
     "lz-string": "^1.5.0",
     "moment": "^2.29.4",
     "react": "^17.0.2",
@@ -31,6 +35,8 @@
     "redux-thunk": "^2.3.0",
     "sass": "^1.69.5",
     "simplebar-react": "^2.3.5",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
     "typesafe-actions": "^5.1.0",
     "web-vitals": "^1.0.1",
     "zod": "^3.22.4",
@@ -45,8 +51,11 @@
     "@types/react-router-dom": "^5.1.8",
     "@types/react-transition-group": "^4.4.2",
     "@vitejs/plugin-react": "^4.1.0",
+    "autoprefixer": "^10.4.16",
     "gh-pages": "^3.2.3",
+    "postcss": "^8.4.32",
     "prettier": "^3.0.3",
+    "tailwindcss": "^3.4.0",
     "typescript": "^5.2.2",
     "vite": "^4.4.11",
     "vite-plugin-svgr": "^4.1.0",
