--- a/package.json
+++ b/package.json
@@ -13,18 +13,20 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.6.3",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.1",
     "clsx": "^2.1.0",
+    "framer-motion": "^10.16.16",
     "lucide-react": "^0.303.0",
     "lz-string": "^1.5.0",
     "moment": "^2.29.4",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.0.3",
     "react-device-detect": "^1.17.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-redux": "^7.2.5",
     "react-router-dom": "^6.21.1",
@@ -51,7 +53,7 @@
     "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.1.8",
     "@types/react-transition-group": "^4.4.2",
-    "@vitejs/plugin-react": "^4.1.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
     "gh-pages": "^3.2.3",
     "postcss": "^8.4.32",
@@ -59,7 +61,7 @@
     "tailwindcss": "^3.4.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.10",
-    "vite-plugin-svgr": "^4.1.0",
+    "vite-plugin-svgr": "^4.2.0",
     "vite-tsconfig-paths": "^4.2.1"
   },
   "homepage": "https://syncroom.kr"
