--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.6.3",
@@ -40,12 +42,15 @@
     "simplebar-react": "^2.3.5",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "twin.macro": "^3.4.0",
     "typesafe-actions": "^5.1.0",
     "web-vitals": "^1.0.1",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.23.4",
+    "@emotion/babel-plugin-jsx-pragmatic": "^0.2.1",
     "@types/node": "^16.3.1",
     "@types/react": "^17.0.14",
     "@types/react-copy-to-clipboard": "^5.0.1",
@@ -55,10 +60,11 @@
     "@types/react-transition-group": "^4.4.2",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
+    "babel-plugin-macros": "^3.1.0",
     "gh-pages": "^3.2.3",
     "postcss": "^8.4.32",
     "prettier": "^3.0.3",
-    "tailwindcss": "^3.4.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
     "vite": "^5.0.10",
     "vite-plugin-svgr": "^4.2.0",
